<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView android:text="@string/TileScreenTitle" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/TitleScreenTitle"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/NameField"
        android:layout_marginTop="72dp"
        android:layout_below="@+id/TitleScreenTitle"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/textView"
        android:layout_toEndOf="@+id/textView" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SurveyButton"
        android:id="@+id/SurveyButton"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/NameField"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/WebsiteButton"
        android:id="@+id/WebsiteButton"
        android:layout_marginTop="49dp"
        android:layout_below="@+id/SurveyButton"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="(results will appear here)"
        android:id="@+id/ResultsText"
        android:layout_marginTop="68dp"
        android:layout_below="@+id/WebsiteButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/NameLabel"
        android:id="@+id/textView"
        android:textColor="@color/material_grey_600"
        android:layout_alignTop="@+id/NameField"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
