<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.labs.nathan.ntbrookslab1.SurveyActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Hello"
        android:id="@+id/NameTextView"
        android:layout_marginLeft="41dp"
        android:layout_marginStart="41dp"
        android:layout_marginTop="68dp"
        android:textColor="@color/material_grey_600"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/SurveyQuestion"
        android:id="@+id/textView2"
        android:textColor="@color/material_grey_600"
        android:layout_below="@+id/NameTextView"
        android:layout_alignLeft="@+id/NameTextView"
        android:layout_alignStart="@+id/NameTextView"
        android:layout_marginTop="43dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/SurveyLabel"
        android:id="@+id/textView3"
        android:textColor="@color/material_grey_600"
        android:layout_below="@+id/textView2"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignStart="@+id/textView2"
        android:layout_marginTop="31dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/AgeInput"
        android:layout_alignTop="@+id/textView3"
        android:layout_toRightOf="@+id/NameTextView"
        android:layout_toEndOf="@+id/NameTextView" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SubmitButton"
        android:id="@+id/SubmitButton"
        android:layout_marginTop="86dp"
        android:layout_below="@+id/AgeInput"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
